2004-11-22  Neal H. Walfield  <neal@gnu.org>

	* deva.c (bootstrap_final): New function.
	(main): Call bootstrap_final as per the start up protocol to tell
	wortel that devais up and running and that it should now start the
	root fs.

2004-11-17  Neal H. Walfield  <neal@gnu.org>

	* Makefile.am (bootdir): New variable.
	(boot_PROGRAMS): Use this instead of noinst_PROGRAMS.

2004-11-17  Neal H. Walfield  <neal@gnu.org>

	* output.h (debug): Include program_name and __FUNCTION__ in
	output.

2004-11-02  Marcus Brinkmann  <marcus@gnu.org>

	* deva-class.c (SIMPLE_CONSOLE): Define.
	[SIMPLE_CONSOLE]: A lot of new code that is only used for testing.
	(deva_io_read): New function.
	(deva_demuxer): Add handling for deva_io_read.
	* deva.c (create_bootstrap_caps): Allocate only one object, and
	copy it out several times.  Call wortel_get_deva_cap_reply, not
	wortel_get_task_cap_reply.

	* Makefile.am (deva_SOURCES): Add task-user.h and task-user.c.
	* task-user.h, task-user.c: New files.
	* deva.c: Include "task-user.h".
	(create_bootstrap_caps): Remove variable startup_cap.
	(setup_threads): Implement it.

2004-11-01  Marcus Brinkmann  <marcus@gnu.org>

	* deva-class.c (struct deva): Remove member obj (and add dummy
	member foo).
	(deva_reinit): Use hurd_cap_obj_to_user instead of cast.
	(deva_class_init): Replace size and alignment with type.
	(deva_alloc): New variable OBJ.  Use it with hurd_cap_class_alloc.
	Use hurd_cap_obj_to_user to get at the deva object.

2004-10-29  Marcus Brinkmann  <marcus@gnu.org>

	* ia32-cmain.c (switch_thread): Correct start of small sub stack
	address.  Reported by Rian Hunter <hurd@thelaststop.net>.

2004-10-28  Marcus Brinkmann  <marcus@gnu.org>

	* Initial check-in.