@@ -1,3 +1,9 @@
+2004-12-01  Neal H. Walfield  <neal@gnu.org>
+
+	* physmem-user.h (physmem_map): Change CONT from a hurd_cap_id_t
+	to a hurd_cap_handle_t.
+	* physmem-user.c (physmem_map): Likewise.
+
 2004-11-17  Neal H. Walfield  <neal@gnu.org>
 
 	* Makefile.am (bootdir): New variable.
